display & format fix
Update 4.1.1.cluster-install.md

--- a/docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+++ b/docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
@@ -207,11 +207,11 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
       | `spec.imagePullPolicy`                                      | `Always`                 | The image pull policy for NebulaGraph images. For more details on pull policies, please see [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy).                                                                                                                                                                                         |
       | `spec.logRotate`                                            | `{}`                     | Log rotation configuration. For details, see [Managing Cluster Logs](../4.5.logging.md).                                                                                                                                                                                                                                                                                           |
       | `spec.enablePVReclaim`                                      | `false`                  | Defines whether to automatically delete PVCs after deleting the cluster to release data. For details, see [Reclaim PV](../4.4.storage-management/4.4.3.configure-pv-reclaim.md).                                                                                                                                                                                                   |
-      | `spec.metad.licenseManagerURL`                              | -                        | Configures the URL pointing to the License Manager (LM), consisting of the access address and port (default port `9119`). For example, `192.168.8.xxx:9119`. **You must configure this parameter to obtain the License information; otherwise, the NebulaGraph cluster will not function.**                                                                                        |
+      | `spec.metad.licenseManagerURL`                              | -                        | Configures the URL pointing to the License Manager (LM), consisting of the access address and port (default port `9119`). For example, `192.168.8.xxx:9119`. For the NebulaGraph Enterprise Edition only.                                                                                        |
       | `spec.storaged.enableAutoBalance`                           | `false`                  | Whether to enable automatic balancing. For details, see [Balancing Storage Data After Scaling Out](../4.8.ha-and-balancing/4.8.3.balance-data-after-scale-out.md).                                                                                                                                                                                                                 |
       | `spec.enableBR`                                             | `false`                  | Defines whether to enable the BR tool. For details, see [Backup and Restore](../4.6.backup-and-restore.md).                                                                                                                                                                                                                                                                        |
       | `spec.imagePullSecrets`                                     | `[]`                     | Defines the Secret required to pull images from a private repository.                                                                                                                                                                                                                                                                                                              |
-      |                                                             |                          |                                                                                                                                                                                                                                                                                                                                                                                    |
+
 
 
 3. Create the NebulaGraph cluster.
@@ -467,7 +467,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
         | `nebula.metad.resources`                                    | `{"resources":{"requests":{"cpu":"500m","memory":"500Mi"},"limits":{"cpu":"1","memory":"1Gi"}}}`      | Resource limits and requests for the Meta service.                                                                                                                                           |
         | `nebula.metad.logVolume`                                    | `{"logVolume": {"enable": true,"storage": "500Mi"}}`                                                  | Log storage configuration for the Meta service. When `enable` is `false`, log volume is not used.                                                                                            |
         | `nebula.metad.dataVolume`                                   | `{"dataVolume": {"storage": "2Gi"}}`                                                                  | Data storage configuration for the Meta service.                                                                                                                                             |
-        | `nebula.metad.licenseManagerURL`                            | `""`                                                                                                  | URL for the license manager (LM) to obtain license information.                                                                                                                              |
+        | `nebula.metad.licenseManagerURL`                            | `""`                                                                                                  | URL for the license manager (LM) to obtain license information. For the NebulaGraph Enterprise Edition only.                                                                                                                             |
         | `nebula.storaged.image`                                     | `vesoft/nebula-storaged`                                                                              | Container image for the Storage service.                                                                                                                                                     |
         | `nebula.storaged.replicas`                                  | `3`                                                                                                   | Number of replicas for the Storage service.                                                                                                                                                  |
         | `nebula.storaged.env`                                       | `[]`                                                                                                  | Container environment variables for the Storage service.                                                                                                                                     |
