--- a/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+++ b/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
@@ -208,13 +208,13 @@
       | `spec.imagePullPolicy`                                      |       ` Always`                  | {{nebula.name}}镜像的拉取策略。关于拉取策略详情，请参考 [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy)。                                                        |
       | `spec.logRotate`                                            | `{}`                     | 日志轮转配置。详情参见[管理集群日志](../4.5.logging.md)。                                                                                                                                                      |
       | `spec.enablePVReclaim`                                      | `false`                  | 定义是否在删除集群后自动删除 PVC 以释放数据。详情参见[回收 PV](../4.4.storage-management/4.4.3.configure-pv-reclaim.md)。                                                                                      |
-      | `spec.metad.licenseManagerURL`                              | -                        | 配置指向 [LM](../../2.get-started/2.2.deploy-lm.md) 的 URL，由 LM 的访问地址和端口（默认端口`9119`）组成。例如，`192.168.8.xxx:9119`。**必须配置此参数以获取 License 信息，否则无法使用{{nebula.name}}集群。** |
+      | `spec.metad.licenseManagerURL`                              | -                        | 配置指向 [LM](../../2.get-started/2.2.deploy-lm.md) 的 URL，由 LM 的访问地址和端口（默认端口`9119`）组成。例如，`192.168.8.xxx:9119`。仅适用于创建企业版{{nebula.name}}集群。 |
       | `spec.storaged.enableAutoBalance`                           | `false`                  | 是否启用自动均衡。详情参见[均衡扩容后的 Storage 数据](../4.8.ha-and-balancing/4.8.3.balance-data-after-scale-out.md)。                                                                                         |
       | `spec.enableBR`                                             | `false`                  | 定义是否启用 BR 工具。详情参见[备份与恢复](../4.6.backup-and-restore.md)。                                                                                                                                     |
       | `spec.imagePullSecrets`                                     | `[]`                     | 定义拉取私有仓库中镜像所需的 Secret。                                                                                                                                                                          |
 
 
-1. 创建 {{nebula.name}} 集群。
+3. 创建 {{nebula.name}} 集群。
 
   ```bash
   kubectl create -f apps_v1alpha1_nebulacluster.yaml -n nebula
@@ -470,7 +470,7 @@
         | `nebula.metad.resources`                                    | `{"resources":{"requests":{"cpu":"500m","memory":"500Mi"},"limits":{"cpu":"1","memory":"1Gi"}}}`      | Meta 服务的资源限制和请求。                                                                                                                   |
         | `nebula.metad.logVolume`                                    | `{"logVolume": {"enable": true,"storage": "500Mi"}}`                                                  | Meta 服务的日志存储配置。当`enable`为`false`时，不启用日志卷。                                                                                |
         | `nebula.metad.dataVolume`                                   | `{"dataVolume": {"storage": "2Gi"}}`                                                                  | Meta 服务的数据存储配置。                                                                                                                     |
-        | `nebula.metad.licenseManagerURL`                            | `""`                                                                                                  | LM 访问地址和端口号，用于获取 License 信息。                                                                                                  |
+        | `nebula.metad.licenseManagerURL`                            | `""`                                                                                                  | LM 访问地址和端口号，用于获取 License 信息。仅适用于创建企业版{{nebula.name}}集群。                                                                                                  |
         | `nebula.storaged.image`                                     | `vesoft/nebula-storaged`                                                                              | Storage 服务的容器镜像。                                                                                                                      |
         | `nebula.storaged.replicas`                                  | `3`                                                                                                   | Storage 服务的副本数量。                                                                                                                      |
         | `nebula.storaged.env`                                       | `[]`                                                                                                  | Storage 服务的容器环境变量。                                                                                                                  |
