add annotation to some examples of `MATCH` clause
as titled

--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -351,6 +351,7 @@ nebula> MATCH ()-[e:follow]->() \
 用户可以用`{<prop_name>: <prop_value>}`表示模式中 Edge type 的属性，例如`[e:follow{likeness:95}]`。
 
 ```ngql
+# 匹配 name 属性为 Tim Duncan 的起始点，degree 属性为 95 的边，返回边的数据。
 nebula> MATCH (v:player{name:"Tim Duncan"})-[e:follow{degree:95}]->(v2) \
         RETURN e;
 +--------------------------------------------------------+
@@ -364,6 +365,7 @@ nebula> MATCH (v:player{name:"Tim Duncan"})-[e:follow{degree:95}]->(v2) \
 使用`WHERE`子句直接匹配边的属性。
 
 ```ngql
+# 匹配属性中值等于 90 的边。
 nebula> MATCH ()-[e]->() \
         WITH e, properties(e) as props, keys(properties(e)) as kk \
         WHERE [i in kk where props[i] == 90] \
@@ -384,6 +386,7 @@ nebula> MATCH ()-[e]->() \
 使用`|`可以匹配多个 Edge type，例如`[e:follow|:serve]`。第一个 Edge type 前的英文冒号（:）不可省略，后续 Edge type 前的英文冒号可以省略，例如`[e:follow|serve]`。
 
 ```ngql
+# 匹配 name 属性为 Tim Duncan 的起始点，edge type 为 follow 和 serve 的边，返回边的数据。
 nebula> MATCH (v:player{name:"Tim Duncan"})-[e:follow|:serve]->(v2) \
         RETURN e;
 +---------------------------------------------------------------------------+
@@ -400,6 +403,7 @@ nebula> MATCH (v:player{name:"Tim Duncan"})-[e:follow|:serve]->(v2) \
 用户可以扩展模式，匹配路径中的多条边。
 
 ```ngql
+# 匹配 name 属性为 Tim Duncan 的起始点，edge type 为 serve 的边，返回起始点和终点的数据。
 nebula> MATCH (v:player{name:"Tim Duncan"})-[]->(v2)<-[e:serve]-(v3) \
         RETURN v2, v3;
 +----------------------------------+-----------------------------------------------------------+
@@ -416,6 +420,7 @@ nebula> MATCH (v:player{name:"Tim Duncan"})-[]->(v2)<-[e:serve]-(v3) \
 用户可以在模式中使用`:<edge_type>*<hop>`匹配定长路径。`hop`必须是一个非负整数。
 
 ```ngql
+# 匹配 name 属性为 Tim Duncan 的起始点，edge type 为 follow 且定长为 2 的边，返回终点的数据。
 nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*2]->(v2) \
         RETURN DISTINCT v2 AS Friends;
 +-----------------------------------------------------------+
@@ -430,6 +435,7 @@ nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*2]->(v2) \
 如果`hop`为 0，模式会匹配路径上的起始点。
 
 ```ngql
+# 匹配 name 属性为 Tim Duncan 的起始点，定长为 0 的边，返回的是该匹配路径上的起始点。
 nebula> MATCH (v:player{name:"Tim Duncan"}) -[*0]-> (v2) \
         RETURN v2;
 +----------------------------------------------------+
@@ -479,6 +485,7 @@ nebula> MATCH (v:player{name:"Tim Duncan"}) -[*0]-> (v2) \
 如果未指定`minHop`和`maxHop`，仅设置了`:<edge_type>*`，则二者都应用默认值，即`minHop`为 1，`maxHop`为无穷大。
 
 ```ngql
+# 匹配 name 属性为 Tim Duncan 的起始点，edge type 为 follow 的边，返回终点的数据。
 nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*]->(v2) \
         RETURN v2 AS Friends;
 +-----------------------------------------------------------+
@@ -488,6 +495,7 @@ nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*]->(v2) \
 | ("player101" :player{age: 36, name: "Tony Parker"})       |
 ...
 
+# 匹配 name 属性为 Tim Duncan 的起始点，edge type 为 follow 且长度在 1 到 3 范围内的边，返回终点的数据。
 nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*1..3]->(v2) \
         RETURN v2 AS Friends;
 +-----------------------------------------------------------+
@@ -498,6 +506,7 @@ nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*1..3]->(v2) \
 | ("player100" :player{age: 42, name: "Tim Duncan"})        |
 ...
 
+# 匹配 name 属性为 Tim Duncan 的起始点，edge type 为 follow 且长度大于等于 1 的边，返回终点的数据。
 nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*1..]->(v2) \
         RETURN v2 AS Friends;
 +-----------------------------------------------------------+
@@ -513,6 +522,7 @@ nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*1..]->(v2) \
 用户可以使用`DISTINCT`关键字聚合重复结果。
 
 ```ngql
+# 匹配 name 属性为 Tim Duncan 的起始点，edge type 为 follow 且长度在 1 到 3 范围内的边，返回聚合重复结果后的终点数据。
 nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*1..3]->(v2:player) \
         RETURN DISTINCT v2 AS Friends, count(v2);
 +-----------------------------------------------------------+-----------+
@@ -528,6 +538,7 @@ nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*1..3]->(v2:player) \
 如果`minHop`为`0`，模式会匹配路径上的起始点。例如，与上个示例相比，下面的示例设置`minHop`为`0`。此时，因为表示`"Tim Duncan"`的点是路径的起始点，所以它在结果集中的计数为 5，比在上个示例的结果中多计一次。
 
 ```ngql
+# 匹配 name 属性为 Tim Duncan 的起始点，edge type 为 follow 且长度在 1 到 3 范围内的边，返回聚合重复结果后的终点数据。
 nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*0..3]->(v2:player) \
         RETURN DISTINCT v2 AS Friends, count(v2);
 +-----------------------------------------------------------+-----------+
@@ -555,6 +566,7 @@ nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow*0..3]->(v2:player) \
 用户可以在变长或定长模式中指定多个 Edge type。`hop`、`minHop`和`maxHop`对所有 Edge type 都生效。
 
 ```ngql
+# 匹配 name 属性为 Tim Duncan 的起始点，edge type 为 follow 和 serve，且定长为 2 的边，返回终点数据。
 nebula> MATCH p=(v:player{name:"Tim Duncan"})-[e:follow|serve*2]->(v2) \
         RETURN DISTINCT v2;
 +-----------------------------------------------------------+
