--- a/docs-2.0-en/4.deployment-and-installation/1.resource-preparations.md
+++ b/docs-2.0-en/4.deployment-and-installation/1.resource-preparations.md
@@ -15,11 +15,12 @@ NebulaGraph is designed and implemented for NVMe SSD. All default parameters are
 - Use local SSD devices, or AWS Provisioned IOPS SSD equivalence.
 
 ## About CPU architecture
-     
-!!! note
 
-    Starting with 3.0.2, you can run containerized NebulaGraph databases on Docker Desktop for ARM macOS or on ARM Linux servers. 
+Starting with 3.0.2, you can run containerized NebulaGraph databases on Docker Desktop for ARM macOS or on ARM Linux servers. 
 
+!!! caution
+
+    We do not recommend you deploy {{nebula.name}} on Docker Desktop for Windows due to its subpar performance. 
     
 
 ## Requirements for compiling the source code
