--- a/docs-2.0-zh/4.deployment-and-installation/1.resource-preparations.md
+++ b/docs-2.0-zh/4.deployment-and-installation/1.resource-preparations.md
@@ -24,7 +24,7 @@
 
 !!! caution
 
-    不建议在 Windows 上安装 Docker Desktop 来部署 {{nebula.name}}，因为 Windows 上的 Docker Desktop 性能较差。
+    不建议在 Windows 上使用 Docker Desktop，因为 Windows 上的 Docker Desktop 性能较差。
   
 
 ## 编译源码要求
