--- a/docs-2.0-en/2.quick-start/1.quick-start-workflow.md
+++ b/docs-2.0-en/2.quick-start/1.quick-start-workflow.md
@@ -10,7 +10,7 @@ You can quickly get started with NebulaGraph by deploying NebulaGraph with Docke
   
       !!! caution
 
-            We do not recommend you deploy {{nebula.name}} on Docker Desktop for Windows due to its subpar performance. If you must use Docker Desktop for Windows, install [WSL 2](https://docs.docker.com/desktop/install/windows-install/#system-requirements) first.
+            We do not recommend you deploy {{nebula.name}} on Docker Desktop for Windows due to its subpar performance. For details, see [#12401](https://github.com/docker/for-win/issues/12401). If you must use Docker Desktop for Windows, install [WSL 2](https://docs.docker.com/desktop/install/windows-install/#system-requirements) first.
 
     2. In the left sidebar of Docker Desktop, click **Extensions** or **Add Extensions**.
     3. On the Extensions Marketplace, search for NebulaGraph and click **Install**.
