--- a/docs-2.0-en/4.deployment-and-installation/1.resource-preparations.md
+++ b/docs-2.0-en/4.deployment-and-installation/1.resource-preparations.md
@@ -20,7 +20,7 @@ Starting with 3.0.2, you can run containerized NebulaGraph databases on Docker D
 
 !!! caution
 
-    We do not recommend you deploy {{nebula.name}} on Docker Desktop for Windows due to its subpar performance. 
+    We do not recommend you deploy {{nebula.name}} on Docker Desktop for Windows due to its subpar performance. For details, see [#12401](https://github.com/docker/for-win/issues/12401). 
     
 
 ## Requirements for compiling the source code
