feat: Update 1.nebula-client.md with jupyter extension

--- a/docs-2.0-zh/14.client/1.nebula-client.md
+++ b/docs-2.0-zh/14.client/1.nebula-client.md
@@ -31,4 +31,4 @@
     - [NORM（Golang ORM）](https://github.com/zhihu/norm)
     - [Graph-Ocean（Java ORM）](https://github.com/nebula-contrib/graph-ocean)
     - [NebulaGraph Ngbatis（MyBatis 风格的 Java ORM）](https://github.com/nebula-contrib/ngbatis)
-
+    - [Jupyter NebulaGraph Extension](https://jupyter-nebulagraph.readthedocs.io/)
