docs en: Update 1.nebula-client.md

--- a/docs-2.0-en/14.client/1.nebula-client.md
+++ b/docs-2.0-en/14.client/1.nebula-client.md
@@ -31,3 +31,4 @@ NebulaGraph supports multiple types of clients for users to connect to and manag
     - [NORM (Golang ORM)](https://github.com/zhihu/norm)
     - [Graph-Ocean (Java ORM)](https://github.com/nebula-contrib/graph-ocean)
     - [NebulaGraph Ngbatis (Java ORM in a MyBatis fashion)](https://github.com/nebula-contrib/ngbatis)
+    - [Jupyter NebulaGraph Extension](https://jupyter-nebulagraph.readthedocs.io/)
