--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/2.meta-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/2.meta-config.md
@@ -1,6 +1,6 @@
 # Meta Service configuration
 
-NebulaGraph provides two initial configuration files for the Meta Service, `nebula-metad.conf.default` and `nebula-metad.conf.production`. Users can use them in different scenarios conveniently. The default file path is `/usr/local/nebula/etc/`.
+NebulaGraph provides two initial configuration files for the Meta service, `nebula-metad.conf.default` and `nebula-metad.conf.production`. Users can use them in different scenarios conveniently. The default file path is `/usr/local/nebula/etc/`.
 
 !!! caution
 
