--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/4.storage-config.md
@@ -43,7 +43,7 @@ For all parameters and their current values, see [Configurations](1.configuratio
 
 | Name           | Predefined value                    | Description                |Whether supports runtime dynamic modifications|
 | :------------- | :------------------------ | :------------------------------------------------ |:------------------|
-| `log_dir`     | `logs` | The directory that stores the Meta Service log. It is recommended to put logs on a different hard disk from the data. |  No|
+| `log_dir`     | `logs` | The directory that stores the Storage service log. It is recommended to put logs on a different hard disk from the data. |  No|
 | `minloglevel` | `0`                      | Specifies the minimum level of the log. That is, log messages at or above this level. Optional values are `0` (INFO), `1` (WARNING), `2` (ERROR), `3` (FATAL). It is recommended to set it to `0` during debugging and `1` in a production environment. If it is set to `4`, NebulaGraph will not print any logs. |  Yes|
 | `v`           | `0`                      | Specifies the detailed level of VLOG. That is, log all VLOG messages less or equal to the level. Optional values are `0`, `1`, `2`, `3`, `4`, `5`. The VLOG macro provided by glog allows users to define their own numeric logging levels and control verbose messages that are logged with the parameter `v`. For details, see [Verbose Logging](https://github.com/google/glog#verbose-logging).| Yes|
 | `logbufsecs`  | `0` | Specifies the maximum time to buffer the logs. If there is a timeout, it will output the buffered log to the log file. `0` means real-time output. This configuration is measured in seconds. |  No|
