--- a/docs-2.0-en/7.data-security/1.authentication/1.authentication.md
+++ b/docs-2.0-en/7.data-security/1.authentication/1.authentication.md
@@ -1,6 +1,6 @@
 # Authentication
 
-NebulaGraph replies on local authentication authentication to implement access control.
+NebulaGraph replies on local authentication to implement access control.
 
 NebulaGraph creates a session when a client connects to it. The session stores information about the connection, including the user information. If the authentication system is enabled, the session will be mapped to corresponding users.
 
