add-balance-partition-within-zones-steps-

--- a/docs-2.0/3.ngql-guide/9.space-statements/1.create-space.md
+++ b/docs-2.0/3.ngql-guide/9.space-statements/1.create-space.md
@@ -127,8 +127,8 @@ To balance the request loads, use the following command.
 nebula> BALANCE LEADER;
 nebula> SHOW HOSTS;
 +-------------+------+----------+--------------+--------------------------------+--------------------------------+---------+
-| Host        | Port | HTTP port | Status   | Leader count | Leader distribution            | Partition distribution         | Version |
-+-------------+------+-----------+----------+--------------+--------------------------------+--------------------------------+---------+
+| Host        | Port | Status   | Leader count | Leader distribution            | Partition distribution         | Version |
++-------------+------+----------+--------------+--------------------------------+--------------------------------+---------+
 | "storaged0" | 9779 | "ONLINE" | 7            | "basketballplayer:3, test:4"   | "basketballplayer:10, test:10" | "{{nebula.release}}" |
 | "storaged1" | 9779 | "ONLINE" | 7            | "basketballplayer:4, test:3"   | "basketballplayer:10, test:10" | "{{nebula.release}}" |
 | "storaged2" | 9779 | "ONLINE" | 6            | "basketballplayer:3, test:3"   | "basketballplayer:10, test:10" | "{{nebula.release}}" |
