--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -43,7 +43,7 @@ In cases where data retrieval fails due to a Storage node failure in a specific 
 - Adjusting the number of Zones isn't allowed.
 - Zone name modifications are unsupported.
 
-## Enable Zone 
+## Enable Zone
 
 1. In the configuration file `nebula-metad.conf` of the Meta service, set `--zone_list` to Zone names to be added, such as `--zone_list=zone1, zone2, zone3`.
 
@@ -158,7 +158,7 @@ nebula> DESC SPACE my_space_1
 ADD HOSTS <ip>:<port> [,<ip>:<port> ...] INTO ZONE <zone_name>;
 ```
 
-- After enabling the Zone feature, you must include the `INTO ZONE` clause when executing the `ADD HOSTS` command; otherwise, adding a Storage node will fail.
+- After enabling the Zone feature, you must include the `INTO ZONE` keywords when executing the `ADD HOSTS` command; otherwise, adding a Storage node will fail.
 - A Storage node can belong to only one Zone, but a single Zone can encompass multiple different Storage nodes.
 
 
@@ -168,7 +168,7 @@ For example:
 nebula> ADD HOSTS 192.168.8.111:9779,192.168.8.112:9779 INTO ZONE az1;
 ```
 
-### Balance the Zone replicas
+### Balance the partitions within each Zone
 
 ```ngql
 BALANCE DATA IN ZONE;
@@ -178,14 +178,7 @@ BALANCE DATA IN ZONE;
 
     Specify a space before executing this command.
 
-After enabling the Zone feature, run `BALANCE DATA IN ZONE` to balance the partition replicas within each Zone.
-
-For example: 
-
-```ngql
-nebula> USE my_space_1;
-nebula> BALANCE DATA IN ZONE;
-```
+After enabling the Zone feature, run `BALANCE DATA IN ZONE` to balance the partitions within each Zone. For more information, see [Storage load balance](../8.service-tuning/load-balance.md).
 
 ### Migrate partitions from the Storage nodes in the specified Zones to other Storage nodes 
 
@@ -219,7 +212,7 @@ nebula> SHOW JOBS 34
 +--------+----------------+------------+----------------------------+----------------------------+
 ```
 
-### Drop Storage nodes from the specified Zone 
+### Drop Storage nodes from the specified Zone
 
 ```ngql
 DROP HOSTS <ip>:<port> [,<ip>:<port> ...];
