--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
@@ -13,7 +13,7 @@
 1. 执行如下命令安装 NebulaGraph Lite。
 
   ```bash
-  sudo apt install python3-pip
+  pip3 install nebulagraph-lite
   ```
 
 2. 启动 NebulaGraph Lite。
