--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
@@ -32,7 +32,7 @@
     nebulagraph start
     ```
 
-返回如下结果表示启动并导入测试数据成功。
+返回如下结果表示启动并导入测试数据集成功。
 
 ```bash
 Info: loading basketballplayer dataset...
