--- a/docs-2.0/4.deployment-and-installation/5.zone.md
+++ b/docs-2.0/4.deployment-and-installation/5.zone.md
@@ -158,7 +158,7 @@ nebula> DESC SPACE my_space_1
 ADD HOSTS <ip>:<port> [,<ip>:<port> ...] INTO ZONE <zone_name>;
 ```
 
-- After enabling the Zone feature, you must include the `INTO ZONE` keywords when executing the `ADD HOSTS` command; otherwise, adding a Storage node will fail.
+- After enabling the Zone feature, you must include the `INTO ZONE` keywords when executing the `ADD HOSTS` command; otherwise, adding a Storage node fails.
 - A Storage node can belong to only one Zone, but a single Zone can encompass multiple different Storage nodes.
 
 
