--- a/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
+++ b/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
@@ -1,22 +1,22 @@
 # Deploy NebulaGraph with NebulaGraph Lite
 
-Using the NebulaGraph Lite can quickly deploy NebulaGraph and start experiencing NebulaGraph in just five minutes.
+Using [NebulaGraph Lite](https://github.com/nebula-contrib/nebulagraph-lite) can quickly deploy NebulaGraph and start experiencing NebulaGraph in just five minutes.
 
 ## Benefits
 
-- Quick installation of the NebulaGraph Lite through the Python package management tool.
-- The NebulaGraph Lite supports the deployment of NebulaGraph with non-root permission.
-- The NebulaGraph Lite supports the deployment of NebulaGraph in containers or any Jupyter Notebook based platform.
+- Quick installation of NebulaGraph Lite through the Python package management tool.
+- NebulaGraph Lite supports the deployment of NebulaGraph with non-root permission.
+- NebulaGraph Lite supports the deployment of NebulaGraph in containers or any Jupyter Notebook based platform.
 
 ## Steps
 
-1. Run the following statement to install the NebulaGraph Lite.
+1. Run the following statement to install NebulaGraph Lite.
 
   ```bash
   pip3 install nebulagraph-lite
   ```
 
-2. Start the NebulaGraph Lite。
+2. Start NebulaGraph Lite。
 
   - Start from Jupyter Notebook
 
@@ -47,3 +47,8 @@ Info: loading basketballplayer dataset...
 
 [ OK ] nebulagraph_lite started successfully!
 ```
+
+## What's next
+
+- Connect to NebulaGraph with [NebulaGraph Jupyter Extension](https://jupyter-nebulagraph.readthedocs.io/en/latest/).
+- Connect to NebulaGraph with [NebulaGraph Console](../connect-to-nebula-graph.md).
