--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
@@ -47,3 +47,8 @@ Info: loading basketballplayer dataset...
 
 [ OK ] nebulagraph_lite started successfully!
 ```
+
+## 下一步
+
+- 使用[NebulaGraph Jupyter Extension](https://jupyter-nebulagraph.readthedocs.io/en/latest/)连接 {{nebula.name}}。
+- 使用[NebulaGraph Console](../connect-to-nebula-graph.md)连接 {{nebula.name}}。
