--- a/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
+++ b/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
@@ -1,12 +1,12 @@
 # Deploy NebulaGraph with NebulaGraph Lite
 
-Using [NebulaGraph Lite](https://github.com/nebula-contrib/nebulagraph-lite) can quickly deploy NebulaGraph and start experiencing NebulaGraph in just five minutes.
+Using [NebulaGraph Lite](https://github.com/nebula-contrib/nebulagraph-lite) can quickly deploy NebulaGraph and start experiencing NebulaGraph in just five minutes. It is ideal for ad-hoc development and learning NebulaGraph.
 
 ## Benefits
 
 - Quick installation of NebulaGraph Lite through the Python package management tool.
 - NebulaGraph Lite supports the deployment of NebulaGraph with non-root permission.
-- NebulaGraph Lite supports the deployment of NebulaGraph in containers or any Jupyter Notebook based platform.
+- NebulaGraph Lite supports the deployment of NebulaGraph in containers or any Jupyter Notebook platform on Linux-based systems.
 
 ## Steps
 
