--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
@@ -1,12 +1,12 @@
 # 使用 NebulaGraph Lite 部署 {{nebula.name}}
 
-使用 NebulaGraph Lite 可以快速安装部署 {{nebula.name}}，仅需五分钟即可开始体验 {{nebula.name}} 图数据库。
+使用 NebulaGraph Lite 可以快速安装部署 {{nebula.name}}，仅需五分钟即可开始体验 {{nebula.name}} 图数据库，适用于临时开发、学习 {{nebula.name}}。
 
 ## 优势
 
 - 通过 Python 包管理工具快速安装 NebulaGraph Lite。
 - 支持非 Root 权限部署 {{nebula.name}}。
-- 支持在容器或任何基于 Jupyter Notebook 的平台上部署 {{nebula.name}}。
+- 支持在容器或基于 Linux 系统的 Jupyter Notebook 平台上部署 {{nebula.name}}。
 
 ## 操作步骤
 
