--- a/docs-2.0-zh/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-zh/20.appendix/6.eco-tool-version.md
@@ -123,9 +123,31 @@ Docker Compose 可以快速部署 {{nebula.name}} 集群。如何使用请参见
 | {{ nebula.tag }}| [Java](https://github.com/vesoft-inc/nebula-java/releases/tag/{{java.tag}})  |
 | {{ nebula.tag }}| [HTTP](https://github.com/vesoft-inc/nebula-http-gateway/releases/tag/{{gateway.tag}})  |
 
-## 未发布
+## 其他工具
 
- - [Rust Client](https://github.com/vesoft-inc/nebula-rust)
- - [Node.js Client](https://github.com/vesoft-inc/nebula-node)
- - Object Graph Mapping Library (OGM, or ORM)
- - 测试
+- ORM
+  - [NGBATIS](https://github.com/nebula-contrib/ngbatis)：对接 Spring Boot 生态的数据库 ORM 框架
+  - [graph-ocean](https://github.com/nebula-contrib/graph-ocean)：基于 nebula-java 客户端的 ORM，详细介绍参见文稿[《隐藏在 graph-ocean 背后的星辰大海》](https://discuss.nebula-graph.com.cn/t/topic/8745)
+  - [nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)：对接 JDBC 的 nebula-java 衍生品，详细介绍参见文稿[《NebulaGraph 支持 JDBC 协议》](https://discuss.nebula-graph.com.cn/t/topic/5657)
+  - [nebula-carina](https://github.com/nebula-contrib/nebula-carina)：基于 nebula-python 客户端的 ORM，详细介绍参见文稿[《NebulaGraph ORM 项目 Carina 简化 Web、AI 开发》](https://discuss.nebula-graph.com.cn/t/topic/12314)
+  - [norm](https://github.com/nebula-contrib/norm)：采用 Golang 编写的 ORM 项目，详细介绍参见文稿[《Norm 知乎开源的 ORM 利器》](https://discuss.nebula-graph.com.cn/t/topic/6423)
+
+- 数据工具
+  - [nebula-real-time-exchange](https://github.com/nebula-contrib/nebula-real-time-exchange)：支持 MySQL 到 NebulaGraph 的数据实时同步功能
+  - [nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin)：基于 DataX 实现的 NebulaGraph 的 Reader 和 Writer 插件，可方便用户离线实现数据同步
+
+- 轻便部署
+  - [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext)：10s 拉起 Docker 图库服务；
+  - [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite)：一个运行在浏览器的 NebulaGraph 沙盒；
+
+- 测试服务
+  - [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula)：轻量级的数据库 Java 测试库；
+
+- 客户端
+  - [zio-nebula](https://github.com/nebula-contrib/zio-nebula)：Scala 客户端；
+  - [nebula-node](https://github.com/nebula-contrib/nebula-node)：Node.js 客户端；
+  - [nebula-php](https://github.com/nebula-contrib/nebula-php)：PHP 客户端；
+  - [nebula-net](https://github.com/nebula-contrib/nebula-net)：.NET 客户端；
+
+- 终端工具
+  - [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin)：JetBrains IDE 系列 nebula-console 插件，支持语法高亮、函数字段自动补全、数据表格分页显示、关系图展示等等功能；
