--- a/docs-2.0-en/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-en/20.appendix/6.eco-tool-version.md
@@ -119,31 +119,34 @@ Docker Compose can quickly deploy NebulaGraph clusters. For how to use it, pleas
 
 ## Other utilities and tools
 
-The following are useful utilities and tools contributed and maintained by community users.
-* ORM
-    * Spring Boot-based ORM: [NGBATIS](https://github.com/nebula-contrib/ngbatis)
-    * Swagger Springboot Demo: [nebula-swagger-demo](https://github.com/nebula-contrib/nebula-swagger-demo)
-    * Java ORM: [graph-ocean](https://github.com/nebula-contrib/graph-ocean)
-    * JDBC Connector: [nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)
-    * Python ORM: [nebula-carina](https://github.com/nebula-contrib/nebula-carina)
-    * Golang ORM: [norm](https://github.com/nebula-contrib/norm)
-* Data processing
-    * Stream ETL: [nebula-real-time-exchange](https://github.com/nebula-contrib/nebula-real-time-exchange)
-    * DataX Plugin: [nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin)
-* Backend services
-    * Infrastructure services:[graph-gateway](https://github.com/nebula-contrib/graph-gateway)
-* Quick deployment
-    * Getting started with NebulaGraph in Docker Desktop: [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext)
-    * Running NebulaGraph in a browser: [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite)
-* Testing
-    * Java testing library: [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula)
-* Clients
-    * Scala client: [zio-nebula](https://github.com/nebula-contrib/zio-nebula)
-    * Node.js client: [nebula-node](https://github.com/nebula-contrib/nebula-node)
-    * PHP client: [nebula-php](https://github.com/nebula-contrib/nebula-php)
-    * .NET client: [nebula-net](https://github.com/nebula-contrib/nebula-net)
-* Terminal 
-    * Nebula-console plugin for JetBrains IDEs: [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin)
+
+The following are useful utilities and tools contributed and maintained by community users. 
 
 
+- Object Relational Mapping (ORM) frameworks
+  - [NGBATIS](https://github.com/nebula-contrib/ngbatis): 对接 Spring Boot 生态的数据库 ORM 框架 framework that integrates with the Spring Boot ecosystem
+  - [graph-ocean](https://github.com/nebula-contrib/graph-ocean)：基于 nebula-java 客户端的 ORM，详细介绍参见文稿[《隐藏在 graph-ocean 背后的星辰大海》](https://discuss.nebula-graph.com.cn/t/topic/8745)
+  - [nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)：对接 JDBC 的 nebula-java 衍生品，详细介绍参见文稿[《NebulaGraph 支持 JDBC 协议》](https://discuss.nebula-graph.com.cn/t/topic/5657)
+  - [nebula-carina](https://github.com/nebula-contrib/nebula-carina)：基于 nebula-python 客户端的 ORM，详细介绍参见文稿[《NebulaGraph ORM 项目 Carina 简化 Web、AI 开发》](https://discuss.nebula-graph.com.cn/t/topic/12314)
+  - [norm](https://github.com/nebula-contrib/norm)：采用 Golang 编写的 ORM 项目，详细介绍参见文稿[《Norm 知乎开源的 ORM 利器》](https://discuss.nebula-graph.com.cn/t/topic/6423)
 
+- 数据工具
+  - [nebula-real-time-exchange](https://github.com/nebula-contrib/nebula-real-time-exchange)：支持 MySQL 到 NebulaGraph 的数据实时同步功能
+  - [nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin)：基于 DataX 实现的 NebulaGraph 的 Reader 和 Writer 插件，可方便用户离线实现数据同步
+
+- 轻便部署
+  - [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext)：10s 拉起 Docker 图库服务
+  - [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite)：一个运行在浏览器的 NebulaGraph 沙盒
+
+- 测试服务
+  - [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula)：轻量级的数据库 Java 测试库
+
+- 客户端
+  - [zio-nebula](https://github.com/nebula-contrib/zio-nebula)：Scala 客户端
+  - [nebula-node](https://github.com/nebula-contrib/nebula-node)：Node.js 客户端
+  - [nebula-php](https://github.com/nebula-contrib/nebula-php)：PHP 客户端
+  - [nebula-net](https://github.com/nebula-contrib/nebula-net)：.NET 客户端
+  - [nebula-rust](https://github.com/vesoft-inc/nebula-rust)：Rust 客户端
+
+- 终端工具
+  - [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin)：JetBrains IDE 系列 nebula-console 插件，支持语法高亮、函数字段自动补全、数据表格分页显示、关系图展示等等功能
