--- a/docs-2.0-zh/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-zh/20.appendix/6.eco-tool-version.md
@@ -129,7 +129,9 @@ Docker Compose 可以快速部署 {{nebula.name}} 集群。如何使用请参见
 
 ## 其他工具
 
-- ORM
+这里罗列社区用户贡献的实用工具，各项目由其发起人及工具爱好者共同维护。
+
+- ORM（Object Relational Mapping）框架
   - [NGBATIS](https://github.com/nebula-contrib/ngbatis)：对接 Spring Boot 生态的数据库 ORM 框架
   - [graph-ocean](https://github.com/nebula-contrib/graph-ocean)：基于 nebula-java 客户端的 ORM，详细介绍参见文稿[《隐藏在 graph-ocean 背后的星辰大海》](https://discuss.nebula-graph.com.cn/t/topic/8745)
   - [nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)：对接 JDBC 的 nebula-java 衍生品，详细介绍参见文稿[《NebulaGraph 支持 JDBC 协议》](https://discuss.nebula-graph.com.cn/t/topic/5657)
@@ -141,18 +143,19 @@ Docker Compose 可以快速部署 {{nebula.name}} 集群。如何使用请参见
   - [nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin)：基于 DataX 实现的 NebulaGraph 的 Reader 和 Writer 插件，可方便用户离线实现数据同步
 
 - 轻便部署
-  - [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext)：10s 拉起 Docker 图库服务；
-  - [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite)：一个运行在浏览器的 NebulaGraph 沙盒；
+  - [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext)：10s 拉起 Docker 图库服务
+  - [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite)：一个运行在浏览器的 NebulaGraph 沙盒
 
 - 测试服务
-  - [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula)：轻量级的数据库 Java 测试库；
+  - [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula)：轻量级的数据库 Java 测试库
 
 - 客户端
-  - [zio-nebula](https://github.com/nebula-contrib/zio-nebula)：Scala 客户端；
-  - [nebula-node](https://github.com/nebula-contrib/nebula-node)：Node.js 客户端；
-  - [nebula-php](https://github.com/nebula-contrib/nebula-php)：PHP 客户端；
-  - [nebula-net](https://github.com/nebula-contrib/nebula-net)：.NET 客户端；
+  - [zio-nebula](https://github.com/nebula-contrib/zio-nebula)：Scala 客户端
+  - [nebula-node](https://github.com/nebula-contrib/nebula-node)：Node.js 客户端
+  - [nebula-php](https://github.com/nebula-contrib/nebula-php)：PHP 客户端
+  - [nebula-net](https://github.com/nebula-contrib/nebula-net)：.NET 客户端
+  - [nebula-rust](https://github.com/vesoft-inc/nebula-rust)：Rust 客户端
 
 - 终端工具
-  - [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin)：JetBrains IDE 系列 nebula-console 插件，支持语法高亮、函数字段自动补全、数据表格分页显示、关系图展示等等功能；
+  - [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin)：JetBrains IDE 系列 nebula-console 插件，支持语法高亮、函数字段自动补全、数据表格分页显示、关系图展示等等功能
 
