--- a/docs-2.0-en/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-en/20.appendix/6.eco-tool-version.md
@@ -124,29 +124,29 @@ The following are useful utilities and tools contributed and maintained by commu
 
 
 - Object Relational Mapping (ORM) frameworks
-  - [NGBATIS](https://github.com/nebula-contrib/ngbatis): 对接 Spring Boot 生态的数据库 ORM 框架 framework that integrates with the Spring Boot ecosystem
-  - [graph-ocean](https://github.com/nebula-contrib/graph-ocean)：基于 nebula-java 客户端的 ORM，详细介绍参见文稿[《隐藏在 graph-ocean 背后的星辰大海》](https://discuss.nebula-graph.com.cn/t/topic/8745)
-  - [nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc)：对接 JDBC 的 nebula-java 衍生品，详细介绍参见文稿[《NebulaGraph 支持 JDBC 协议》](https://discuss.nebula-graph.com.cn/t/topic/5657)
-  - [nebula-carina](https://github.com/nebula-contrib/nebula-carina)：基于 nebula-python 客户端的 ORM，详细介绍参见文稿[《NebulaGraph ORM 项目 Carina 简化 Web、AI 开发》](https://discuss.nebula-graph.com.cn/t/topic/12314)
-  - [norm](https://github.com/nebula-contrib/norm)：采用 Golang 编写的 ORM 项目，详细介绍参见文稿[《Norm 知乎开源的 ORM 利器》](https://discuss.nebula-graph.com.cn/t/topic/6423)
+  - [NGBATIS](https://github.com/nebula-contrib/ngbatis): An ORM framework that integrates with the Spring Boot ecosystem
+  - [graph-ocean](https://github.com/nebula-contrib/graph-ocean): An ORM framework developed based on NebulaGraph Java client
+  - [nebula-jdbc](https://github.com/nebula-contrib/nebula-jdbc): An ORM framework that supports JDBC  
+  - [nebula-carina](https://github.com/nebula-contrib/nebula-carina): An ORM framework developed based on NebulaGraph Python client
+  - [norm](https://github.com/nebula-contrib/norm): An ORM framework written in Golang
 
-- 数据工具
-  - [nebula-real-time-exchange](https://github.com/nebula-contrib/nebula-real-time-exchange)：支持 MySQL 到 NebulaGraph 的数据实时同步功能
-  - [nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin)：基于 DataX 实现的 NebulaGraph 的 Reader 和 Writer 插件，可方便用户离线实现数据同步
+- Data processing tools
+  - [nebula-real-time-exchange](https://github.com/nebula-contrib/nebula-real-time-exchange): Enables real-time data synchronization from MySQL to NebulaGraph
+  - [nebula-datax-plugin](https://github.com/nebula-contrib/nebula-datax-plugin): Provides NebulaGraph's Reader and Writer plugins based on DataX to enable offline data synchronization
 
-- 轻便部署
-  - [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext)：10s 拉起 Docker 图库服务
-  - [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite)：一个运行在浏览器的 NebulaGraph 沙盒
+- Quick deployment
+  - [nebulagraph-docker-ext](https://github.com/nebula-contrib/nebulagraph-docker-ext): Starts NebulaGraph in Docker Desktop in 10 seconds
+  - [nebulagraph-lite](https://github.com/nebula-contrib/nebulagraph-lite): A NebulaGraph sandbox running in the browser
+ 
+- Testing
+  - [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula): A lightweight database testing library for Java
 
-- 测试服务
-  - [testcontainers-nebula](https://github.com/nebula-contrib/testcontainers-nebula)：轻量级的数据库 Java 测试库
+- Clients
+  - [zio-nebula](https://github.com/nebula-contrib/zio-nebula): Scala client
+  - [nebula-node](https://github.com/nebula-contrib/nebula-node): Node.js client
+  - [nebula-php](https://github.com/nebula-contrib/nebula-php): PHP client
+  - [nebula-net](https://github.com/nebula-contrib/nebula-net): .NET client
+  - [nebula-rust](https://github.com/vesoft-inc/nebula-rust): Rust client
 
-- 客户端
-  - [zio-nebula](https://github.com/nebula-contrib/zio-nebula)：Scala 客户端
-  - [nebula-node](https://github.com/nebula-contrib/nebula-node)：Node.js 客户端
-  - [nebula-php](https://github.com/nebula-contrib/nebula-php)：PHP 客户端
-  - [nebula-net](https://github.com/nebula-contrib/nebula-net)：.NET 客户端
-  - [nebula-rust](https://github.com/vesoft-inc/nebula-rust)：Rust 客户端
-
-- 终端工具
-  - [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin)：JetBrains IDE 系列 nebula-console 插件，支持语法高亮、函数字段自动补全、数据表格分页显示、关系图展示等等功能
+- Terminal tools
+  - [nebula-console-intellij-plugin](https://github.com/nebula-contrib/nebula-console-intellij-plugin): A Nebula-console plugin for JetBrains IDEs that supports syntax highlighting, function field auto-completion, data table pagination, and relationship graphs.
