--- a/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
+++ b/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
@@ -16,7 +16,7 @@ Using [NebulaGraph Lite](https://github.com/nebula-contrib/nebulagraph-lite) can
   pip3 install nebulagraph-lite
   ```
 
-2. Start NebulaGraph Lite。
+2. Start NebulaGraph Lite. NebulaGraph Lite automatically deploys and starts the NebulaGraph services, and imports the test dataset.
 
   - Start from Jupyter Notebook
 
