--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
@@ -1,6 +1,6 @@
 # 使用 NebulaGraph Lite 部署 {{nebula.name}}
 
-使用 [NebulaGraph Lite](https://github.com/nebula-contrib/nebulagraph-lite)) 可以快速安装部署 {{nebula.name}}，仅需五分钟即可开始体验 {{nebula.name}} 图数据库，适用于临时开发、学习 {{nebula.name}}。
+使用 [NebulaGraph Lite](https://github.com/nebula-contrib/nebulagraph-lite) 可以快速安装部署 {{nebula.name}}，仅需五分钟即可开始体验 {{nebula.name}} 图数据库，适用于临时开发、学习 {{nebula.name}}。
 
 ## 优势
 
