--- a/docs-2.0-en/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-en/20.appendix/6.eco-tool-version.md
@@ -117,7 +117,8 @@ Docker Compose can quickly deploy NebulaGraph clusters. For how to use it, pleas
 | {{ nebula.tag }}| [Java](https://github.com/vesoft-inc/nebula-java/releases/tag/{{java.tag}})  |
 | {{ nebula.tag }}| [HTTP](https://github.com/vesoft-inc/nebula-http-gateway/releases/tag/{{gateway.tag}})  |
 
-## Other utilities and tools
+
+## Community contributed tools
 
 The following are useful utilities and tools contributed and maintained by community users. 
 
