--- a/docs-2.0-zh/20.appendix/6.eco-tool-version.md
+++ b/docs-2.0-zh/20.appendix/6.eco-tool-version.md
@@ -123,7 +123,7 @@ Docker Compose 可以快速部署 {{nebula.name}} 集群。如何使用请参见
 | {{ nebula.tag }}| [Java](https://github.com/vesoft-inc/nebula-java/releases/tag/{{java.tag}})  |
 | {{ nebula.tag }}| [HTTP](https://github.com/vesoft-inc/nebula-http-gateway/releases/tag/{{gateway.tag}})  |
 
-## 其他工具
+## 社区贡献的工具
 
 这里罗列社区用户贡献的实用工具，各项目由其发起人及工具爱好者共同维护。
 
