--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/8.deploy-nebula-graph-with-lite.md
@@ -16,7 +16,7 @@
   pip3 install nebulagraph-lite
   ```
 
-2. 启动 NebulaGraph Lite。NebulaGraph Lite 会自动部署并启动 {{nebula.name}} 服务，以及导入测试数据集。
+2. 启动 NebulaGraph Lite。NebulaGraph Lite 会自动部署并启动单节点 {{nebula.name}} 服务，以及导入测试数据集。
 
   - 从 Jupyter Notebook 启动
 
